--- a/12columns/index.html
+++ b/12columns/index.html
@@ -13,27 +13,56 @@ div[class*="column-"] {
     background: #ccc;
     margin-bottom: 20px;
 }
-div.column-full { background: none; }
+div.column-full { background: none; height: auto; }
 </style>
 </head>
 <body>
     <div class="content column-full">
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
+        <div class="column-one-twelfths fleft space-right"></div>
         <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
-        <div class="column-one-twelfths fleft"></div>
+
+        <div class="clear"></div>
     </div>
     <div class="content column-full">
+        <div class="column-half fleft space-right"></div>
         <div class="column-half fleft"></div>
-        <div class="column-half fleft"></div>
+
+        <div class="clear"></div>
+    </div>
+    <div class="content column-full">
+        <div class="column-third fleft space-right"></div>
+        <div class="column-third fleft space-right"></div>
+        <div class="column-third fleft"></div>
+
+        <div class="clear"></div>
+    </div>
+    <div class="content column-full">
+        <div class="column-quarter fleft space-right"></div>
+        <div class="column-quarter fleft space-right"></div>
+        <div class="column-quarter fleft space-right"></div>
+        <div class="column-quarter fleft"></div>
+
+        <div class="clear"></div>
+    </div>
+    <div class="content column-full">
+        <div class="column-sixth fleft space-right"></div>
+        <div class="column-sixth fleft space-right"></div>
+        <div class="column-sixth fleft space-right"></div>
+        <div class="column-sixth fleft space-right"></div>
+        <div class="column-sixth fleft space-right"></div>
+        <div class="column-sixth fleft"></div>
+
+        <div class="clear"></div>
     </div>
 </body>
 </html>
