--- a/16columns/index.html
+++ b/16columns/index.html
@@ -13,7 +13,7 @@ div[class*="column-"] {
     background: #ccc;
     margin-bottom: 20px;
 }
-div.column-full { background: none; }
+div.column-full { background: none; height: auto; }
 </style>
 </head>
 <body>
@@ -38,6 +38,12 @@ div.column-full { background: none; }
     <div class="content column-full">
         <div class="column-half fleft"></div>
         <div class="column-half fleft"></div>
+    </div>
+    <div class="content column-full">
+        <div class="column-quarter fleft"></div>
+        <div class="column-quarter fleft"></div>
+        <div class="column-quarter fleft"></div>
+        <div class="column-quarter fleft"></div>
     </div>
 </body>
 </html>
