--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="12columns/column-gs.css">
+    <link rel="stylesheet" href="column-gs.css">
 
 <style>
-div[class*="column-"] {
+div[class*="column-"] .inner {
     height: 100px;
     background: #ccc;
     margin-bottom: 20px;
@@ -17,52 +17,154 @@ div.column-full { background: none; height: auto; }
 </style>
 </head>
 <body>
-    <div class="content column-full">
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft space-right"></div>
-        <div class="column-one-twelfths fleft"></div>
 
-        <div class="clear"></div>
+    <div class="column-full content cf">
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-twelfth">
+            <div class="inner"></div>
+        </div>
     </div>
-    <div class="content column-full">
-        <div class="column-half fleft space-right"></div>
-        <div class="column-half fleft"></div>
 
-        <div class="clear"></div>
+    <div class="column-full content cf">
+        <div class="column-half">
+            <div class="inner"></div>
+        </div>
+        <div class="column-half">
+            <div class="inner"></div>
+        </div>
     </div>
-    <div class="content column-full">
-        <div class="column-third fleft space-right"></div>
-        <div class="column-third fleft space-right"></div>
-        <div class="column-third fleft"></div>
-
-        <div class="clear"></div>
+    <div class="column-full content cf">
+        <div class="column-third">
+            <div class="inner"></div>
+        </div>
+        <div class="column-third">
+            <div class="inner"></div>
+        </div>
+        <div class="column-third">
+            <div class="inner"></div>
+        </div>
     </div>
-    <div class="content column-full">
-        <div class="column-quarter fleft space-right"></div>
-        <div class="column-quarter fleft space-right"></div>
-        <div class="column-quarter fleft space-right"></div>
-        <div class="column-quarter fleft"></div>
-
-        <div class="clear"></div>
+    <div class="column-full content cf">
+        <div class="column-quarter">
+            <div class="inner"></div>
+        </div>
+        <div class="column-quarter">
+            <div class="inner"></div>
+        </div>
+        <div class="column-quarter">
+            <div class="inner"></div>
+        </div>
+        <div class="column-quarter">
+            <div class="inner"></div>
+        </div>
     </div>
-    <div class="content column-full">
-        <div class="column-sixth fleft space-right"></div>
-        <div class="column-sixth fleft space-right"></div>
-        <div class="column-sixth fleft space-right"></div>
-        <div class="column-sixth fleft space-right"></div>
-        <div class="column-sixth fleft space-right"></div>
-        <div class="column-sixth fleft"></div>
-
-        <div class="clear"></div>
+    <div class="column-full content">
+        <div class="column-half content cf">
+            <div class="column-quarter">
+                <div class="inner"></div>
+            </div>
+            <div class="column-quarter">
+                <div class="inner"></div>
+            </div>
+        </div>
+    </div>
+    <div class="column-full content">
+        <div class="column-three-quarters content cf">
+            <div class="column-quarter">
+                <div class="inner"></div>
+            </div>
+            <div class="column-quarter">
+                <div class="inner"></div>
+            </div>
+            <div class="column-quarter column-single">
+                <div class="inner"></div>
+            </div>
+        </div>
+    </div>
+    <div class="column-full content cf">
+        <div class="column-sixth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-sixth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-sixth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-sixth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-sixth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-sixth">
+            <div class="inner"></div>
+        </div>
+    </div>
+    <div class="column-full content cf">
+        <div class="column-fifth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-fifth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-fifth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-fifth">
+            <div class="inner"></div>
+        </div>
+        <div class="column-fifth column-single">
+            <div class="inner"></div>
+        </div>
+    </div>
+    <div class="column-full content cf">
+        <div class="column-two-fifths">
+            <div class="inner"></div>
+        </div>
+        <div class="column-three-fifths">
+            <div class="inner"></div>
+        </div>
+    </div>
+    <div class="column-full content cf">
+        <div class="column-five-twelfths">
+            <div class="inner"></div>
+        </div>
+        <div class="column-seven-twelfths">
+            <div class="inner"></div>
+        </div>
     </div>
 </body>
 </html>
