--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="column-gs.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/column-gs.css">
 
 <style>
 div[class*="column-"] .inner {
